--- a/ruoyi-admin/pom.xml
+++ b/ruoyi-admin/pom.xml
@@ -16,6 +16,12 @@
     </description>
 
     <dependencies>
+        <!-- 火山引擎 -->
+        <dependency>
+            <groupId>com.volcengine</groupId>
+            <artifactId>volcengine-java-sdk-ark-runtime</artifactId>
+            <version>LATEST</version>
+        </dependency>
 
         <!-- spring-boot-devtools -->
         <dependency>
